Incremental progress on ipyautoui

--- a/03b_ipyautoui.ipynb
+++ b/03b_ipyautoui.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp widgets_pydantic"
+    "#| default_exp widgets_pydantic_no_dont"
    ]
   },
   {
@@ -62,7 +62,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO move to answers \n",
+    "# TODO: write answer \n",
+    "\n",
     "from pydantic import BaseModel\n",
     "\n",
     "class SimpleModel(BaseModel):\n",
@@ -114,7 +115,7 @@
     "1. `di_widgets` -- dictionary of widgets, one widget for each pydantic field.\n",
     "2. `value` -- dictionary of values, one key and value for each pydantic field.\n",
     "\n",
-    "Though one could use `di_widgets` to display the widget for a field outside the auto-generated widget, that is rarely useful. It is sometimes handy, though, to explore the properties of that widget."
+    "Though one could use `di_widgets` to display the widget for a field outside the auto-generated widget, that is rarely useful. It is sometimes handy, though, to explore the properties of that widget, or to change its properties."
    ]
   },
   {
@@ -153,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can set the value, like with any other widget:"
+    "You can set the value, like with any other widget, but make sure that the value is a dictionary."
    ]
   },
   {
@@ -169,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The value can also be observed, though there is a twist -- it is `_value` that you observe, not `value. The observer below simply prints the value of the widget.\n"
+    "The value can also be observed, though there is a twist -- it is `_value` that you observe, not `value`. The observer below simply prints the value of the widget.\n"
    ]
   },
   {
@@ -206,7 +207,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO: write answer "
+   ]
   },
   {
    "cell_type": "code",
@@ -230,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add contraint to window size, one constraint at a time, to see how they affect the widget that is generated."
+    "Add constraints to window size, one constraint at a time, to see how they affect the widget that is generated."
    ]
   },
   {
@@ -243,7 +246,7 @@
     "from pydantic import Field\n",
     "\n",
     "class SimpleModel2(BaseModel):\n",
-    "    window_size : Annotated[int, Field(gt=1)]"
+    "    window_size : Annotated[int, Field(ge=2)]"
    ]
   },
   {
@@ -260,7 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Oh my! Apparently the widget is sort of ok with values that are not consistent with the pydantic model."
+    "Oh my! Apparently the widget is sort of ok with values that are not consistent with the pydantic model. Let's check to see what kind of widget ipyautoui made for us:"
    ]
   },
   {
@@ -270,6 +273,13 @@
    "outputs": [],
    "source": [
     "ui2.di_widgets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It seems like a `BoundedIntText` might be a better representation of this field. We can tell ipyautoui to use that widget via a dictionary passed into the `json_schema_extra` argument. The dictionary key that specifies the widget is `autoui`."
    ]
   },
   {
@@ -290,6 +300,13 @@
    "source": [
     "ui3 = AutoUi(SimpleModel3)\n",
     "ui3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nice, now the user cannot set the value below 2!"
    ]
   },
   {
