--- a/02c_layouts.ipynb
+++ b/02c_layouts.ipynb
@@ -351,7 +351,7 @@
     "INTRO_TEXT = '''\n",
     "<p><b>Curve Smoothing</b>\n",
     "This tool is for smoothing and selecting land-ocean temperature data for visualization. Start by selecting a date\n",
-    "range, and then select the smoothing algorithm you want to use. Then click through to the next step, where you will change properies\n",
+    "range, and then select the smoothing algorithm you want to use. Then click through to the next step, where you will change properties\n",
     "of the curve smoothing algorithm you selected and visualize the data. \n",
     "</p>\n",
     "'''\n",
