--- a/00_welcome.ipynb
+++ b/00_welcome.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "## Prerequisite Knowledge\n",
     "\n",
-    "To follow along with this tutorial, you will want familiar with [Jupyter widgets](https://ipywidgets.readthedocs.io/en/latest/) (aka `ipywidgets`).\n",
+    "To follow along with this tutorial, you will want to be familiar with [Jupyter widgets](https://ipywidgets.readthedocs.io/en/latest/) (aka `ipywidgets`) although we will review most of the critical ideas.\n",
     "\n",
     "We will write and make use of some additional Python packages to automate the building of more complicated widgets, but familiarity with Jupyter widgets will be needed to exploit these more complicated widgets."
    ]
@@ -62,7 +62,7 @@
     "    - Python\n",
     "    - Jupyter\n",
     "    - JupyterLab\n",
-    "    - ipywidgets"
+    "    - Jupyter widgets aka ipywidgets"
    ]
   },
   {
@@ -86,9 +86,8 @@
     "0. Installing environment\n",
     "1. **Review**: JupyterLab and ipywidgets\n",
     "    - Benefits of developing in Jupyter\n",
-    "    - Benefits of JupyterLab\n",
-    "    - ipywidgets\n",
-    "2. **[nbdev](https://nbdev.fast.ai)**: Building a simple dashboard and exporting it to Python modules\n",
+    "    - Benefits of JupyterLab \n",
+    "2. **[nbdev](https://nbdev.fast.ai)**: Building a simple dashboard and exporting it to Python modules.  During the process we will introduce nbdev and review [Jupyter widgets](https://ipywidgets.readthedocs.io/en/latest/).\n",
     "3. **[pydantic](https://docs.pydantic.dev/latest/) and [ipyautoui](https://pyautogui.readthedocs.io/en/latest/)**: Tools for validating inputs and automatically building settings UIs\n",
     "4. **[solara](https://solara.dev)**: Another option for building components or entire applications declaratively.\n",
     "5.  **Deployment**: Review of options for deploying a Jupyter notebook as a web app\n",
@@ -97,6 +96,12 @@
     "    - **[Voici](https://github.com/voila-dashboards/voici)** - Turn Jupyter notebooks into standalone web apps using client-side rendering\n",
     "    - **[GitHub Pages](https://pages.github.com/)** - Host a static website directly from a GitHub repository (can be used with Voici)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83b6df67",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
