--- a/03b_ipyautoui.ipynb
+++ b/03b_ipyautoui.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Introduction to ipyautoui\n",
     "\n",
@@ -319,6 +321,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SimpleModel4(BaseModel):\n",
+    "    window_size: Annotated[int, Field(ge=2, le=100, description=\"Size of smoothing window\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ui4 = AutoUi(SimpleModel4)\n",
+    "ui4"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -415,10 +437,89 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "ui.value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Enforcing the constraint between polynomial order and window size\n",
+    "\n",
+    "There are a few options here:\n",
+    "\n",
+    "1. Change one or both of the ranges of `widnow_size` and `polynomial_order`\n",
+    "    1. When window size is being changed and a conflict arises, either\n",
+    "        1. update the maximum value of the polynomial order to be consistent with window size, with the side effect that the value will be updated to.\n",
+    "        1. update the value of `polynomial_order` but not its maximum.\n",
+    "    1. When the polynomial order is changed, either\n",
+    "        1. update the minimum allowed window size, or\n",
+    "        1. update the value of the window size.\n",
+    "1. reset the controls to a valid value and display a warning to the user.\n",
+    "\n",
+    "It does not matter so much which of these you choose, but you do need to choose one."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the first version of the dashboard we did choice 1.A.a -- when `window_size` changed the `polynomial_order` was set to the smaller of 10 and `window_size - 1`.\n",
+    "\n",
+    "Here we will implement 2 because it is a little different than what we did in the first round of the dashboard. It also places the responsibility of deciding the correct course of action (increase `window_size` or decrease `polynomial-order`) on the user. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our approach is to observe the `_value` of the widget, try to make a valid model out of it, and if that fails set the widget to the old value. `ipyautoui` will take care of displaying an appropriate error message for us.\n",
+    "\n",
+    "The observe below is created using a *closure*, which is a function is created inside of another function where the ineer function uses some of the variables form the outer function. Here we do that instead of treating `ui` as a global variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pydantic import ValidationError\n",
+    "def make_enforcer(ui):\n",
+    "    def constraint_enforcer(change):\n",
+    "        \"\"\"\n",
+    "        Reset widget to the most recent valid value if the new\n",
+    "        value results in an invalid value.\n",
+    "        \"\"\"\n",
+    "        print(change[\"new\"])\n",
+    "        print(change[\"old\"])\n",
+    "        try:\n",
+    "            # Every AutoUi widget has a copy of the model class\n",
+    "            # We'll try validating the value in change[\"new\"] and see if it works\n",
+    "            ui.model.model_validate(change[\"new\"])\n",
+    "        except ValidationError:\n",
+    "            # That failed, so reset the ui to the old value\n",
+    "            ui.value = change[\"old\"]\n",
+    "\n",
+    "    return constraint_enforcer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ui.observe(make_enforcer(ui), \"_value\")"
    ]
   },
   {
