Final tweaks to widgets including solutions removal.

--- a/01b_workflow.ipynb
+++ b/01b_workflow.ipynb
@@ -29,7 +29,7 @@
     "Across all the notebooks in this tutorial, we will be developing a small web app that will provide a graphical user interface (GUI) for exploring a dataset that contains global land-ocean temperature data. The data is stored in a CSV file.\n",
     "\n",
     "We will build the web app using a Jupyter notebook where our workflow will:\n",
-    "- **load a data file** with global temperature data and\n",
+    "- **load a data file** with global land-ocean temperature data and\n",
     "- **smooth the data with several algorithms**.\n",
     "- In the GUI, you should be able to **select a particular range of years** and\n",
     "- **create a new data file** containing the smoothed data for desired time range.\n",
@@ -56,7 +56,7 @@
    "source": [
     "## Load data from file\n",
     "\n",
-    "We have a data file contains the global land-ocean temperature data from 1880 to 2020 that we would ultimately like to visualize using a web app. We will start by loading the data for this tutorial from the CSV file into a `pandas` DataFrame."
+    "We have a data file contains the global land-ocean temperature data from 1880 to 2023 that we would ultimately like to visualize using a web app. We will start by loading the data for this tutorial from the CSV file into a `pandas` DataFrame."
    ]
   },
   {
@@ -126,9 +126,10 @@
     "moving_avg_col = f'Moving_Average_{window_size}'\n",
     "SG_col = f'Savitzky_Golay{poly_order}_{window_size}'\n",
     "\n",
-    "# Apply Savitzky-Golay smoothing to the Temperature column\n",
-    "df[moving_avg_col] = savgol_filter(df['Temperature'], window_size, 1)\n",
-    "df[SG_col] = savgol_filter(df['Temperature'], window_size, poly_order)\n",
+    "# Apply Savitzky-Golay smoothing to the Temperature column (rounding to 3 decimal\n",
+    "# places)\n",
+    "df[moving_avg_col] = savgol_filter(df['Temperature'], window_size, 1).round(decimals=3)\n",
+    "df[SG_col] = savgol_filter(df['Temperature'], window_size, poly_order).round(decimals=3)\n",
     "df"
    ]
   },
@@ -182,7 +183,7 @@
    "source": [
     "plt.xlabel('Year')\n",
     "plt.ylabel('Temperature')\n",
-    "plt.title('Global Temperature versus Time')\n",
+    "plt.title('Global Ocean Temperature versus Time')\n",
     "plt.plot(subset_df['Year'], subset_df['Temperature'], label='Raw Data')\n",
     "plt.plot(subset_df['Year'], subset_df[SG_col], label='Savitzky-Golay Filtered')\n",
     "plt.plot(subset_df['Year'], subset_df[moving_avg_col], label='Moving Average Filtered')\n",
