--- a/02b_widgets.ipynb
+++ b/02b_widgets.ipynb
@@ -8,10 +8,6 @@
     "# Reviewing Jupyter Widgets: Building a Data Dashboard\n",
     "\n",
     "## TODO LIST\n",
-    "- [ ] Add a better pandas dataframe display using `ipydatagrid`\n",
-    "- [x] Need to fix `%%exception` magic as it is not working.\n",
-    "- [x] Revise all references to answers to the new cell numbers in the final version of this notebook.\n",
-    "- [ ] Remove all the exported answers from the notebook\n",
     "- [ ] Once main has been rebuilt, uncomment the code to display it.\n",
     "- [ ] Get to the point where a first version of the dashboard package is created, but note the complexity in the handling of all the settings since we require observer functions to handle all the individual settings (since they are separate widgets).  Do we mention the need to code up validation of the settings (e.g. - We need to ensure the degree of the fit was reasonable given the number of data points, etc.)?\n"
    ]
@@ -107,10 +103,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e5c6ecde-5850-4d35-903e-6ed258669fe6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Line magic function `%answer` not found.\n"
+     ]
+    }
+   ],
    "source": [
     "#| export\n",
     "\n",
@@ -120,7 +124,7 @@
     "import os\n",
     "from matplotlib import pyplot as plt\n",
     "from scipy.signal import savgol_filter\n",
-    "import ipywidgets as widgets  # add import statement for Jupyter widgets"
+    "# add import statement for Jupyter widgets"
    ]
   },
   {
@@ -272,8 +276,8 @@
     "#| export\n",
     "# %answer key/dashboard/widgets.py 21\n",
     "\n",
-    "year_range.max =  max(original_df['Year']) # set the 'max' attribute of the slider to the minimum year of the our data\n",
-    "year_range.min = min(original_df['Year'])  # and let's do the same for 'min'"
+    "# set the 'max' attribute of the slider to the minimum year of the our data\n",
+    "# and let's do the same for 'min'"
    ]
   },
   {
@@ -341,7 +345,7 @@
     "#| export\n",
     "# %answer key/dashboard/widgets.py 27\n",
     "\n",
-    "selected_df = original_df[(original_df['Year'] >= year_range.value[0]) & (original_df['Year'] <= year_range.value[1])] # selected_df = original_df[(original_df['Year'] >= from_year) & (original_df['Year'] <= to_year)]"
+    "# selected_df = original_df[(original_df['Year'] >= from_year) & (original_df['Year'] <= to_year)]"
    ]
   },
   {
@@ -498,7 +502,7 @@
     "\n",
     "As it turns out, both versions of the function have copies that are called when there is a change in `year_range`.  This is an illustration that we can attach MULTIPLE handler functions to a single widget.  That said, it is a bit confusing to have two functions with the same name attached to this widget.\n",
     "\n",
-    "**Note**: This happened because functions are treated by Python as immutable objects, so when we redefined the function, we were actually creating a new function object and assigning it to the same name.  The old function object was still attached to the widget."
+    "**Note**: This happened because functions are immutable objects in Python, so when we redefined the function, we were actually creating a new function object and assigning it to the same name.  The old function object was still attached to the widget."
    ]
   },
   {
@@ -562,7 +566,7 @@
     "#| export\n",
     "# %answer key/dashboard/widgets.py  46\n",
     "\n",
-    "year_range.observe(on_range_change, 'value') # year_range.observe()"
+    "# year_range.observe()"
    ]
   },
   {
@@ -715,9 +719,9 @@
    "source": [
     "### A Better Way to Display Dataframes\n",
     "\n",
-    "Notice that if we make the range too large, the dataframe will not display all the rows. This is because the default display of a dataframe is to only show the first and last 30 rows. We could change these settings in `pandas` but we still face the problem of the displayed dataframe changing size when we change the range.\n",
+    "Notice that the size of the displayed pandas dataframe changes because default display of a dataframe is to only show up to 30 rows. This means our Output widget changes size when we change the range of years in the selected data.\n",
     "\n",
-    "This is a common enough problem that there exists a package for dealing with this. It's called [ipydatagrid](https://github.com/bloomberg/ipydatagrid). Let's import it and see how it works."
+    "Another approach is rather than using the generic output widget to instead use one that is specifically designed for pandas dataframes. It's called [ipydatagrid](https://github.com/bloomberg/ipydatagrid). Let's import it and see how it works."
    ]
   },
   {
@@ -749,7 +753,7 @@
    "id": "10353fdb",
    "metadata": {},
    "source": [
-    "Notice that the `DataGrid` widget includes some nice features such as auto-fitting the column and row size and choosing to only show the column headers (which hides the 'index' at the beginning of each row of a `pandas` dataframe).  We can also resort data in the visual display of the table via drop downs.\n",
+    "Notice that the `DataGrid` widget includes some nice features such as auto-fitting the column and row size and choosing to only show the column headers (which hides the 'index' at the beginning of each row of a `pandas` dataframe).  We can also resort data in the visual display of the table via drop downs. But its biggest advantage is that it doesn't change size when the number of rows changes, instead a scrollbar appears or disappears as needed.\n",
     "\n",
     "It is a widget which means we can define a function to update the data displayed in the widget.  Let's try that below."
    ]
@@ -793,9 +797,9 @@
    "id": "7c7e7630-f949-4003-81f6-70b94e5108c2",
    "metadata": {},
    "source": [
-    "## Add column for Savitzky-Golay filter\n",
+    "## Add column for Smoothed Data\n",
     "\n",
-    "Now we have data selection down, so the next step is to also add a column to our data for the smoothed curve. Rather than plotting two different smoothed curves as we did in [our original data workflow](./01b_workflow.ipynb), we will only plot one, but we will allow the user to change the degree of the polynomial fit and the window size of the filter."
+    "Now we have data selection down, so the next step is to also add a column to our data for the smoothed data curve. Rather than plotting two different smoothed curves as we did in [our original data workflow](./01b_workflow.ipynb), we will only plot one, but we will allow the user to change the degree of the polynomial fit and the window size of the filter."
    ]
   },
   {
@@ -806,11 +810,13 @@
    "outputs": [],
    "source": [
     "# Set the window size and polynomial order for the Savitzky-Golay filter\n",
-    "window_size = 20\n",
-    "poly_order = 3\n",
+    "window_size_int = 20\n",
+    "poly_order_int = 3\n",
     "\n",
     "# Apply Savitzky-Golay smoothing to the Temperature column\n",
-    "original_df['Smoothed Data'] = savgol_filter(original_df['Temperature'], window_size, poly_order)\n",
+    "original_df['Smoothed Data'] = savgol_filter(original_df['Temperature'],\n",
+    "                                             window_size_int, \n",
+    "                                             poly_order_int).round(decimals=3)\n",
     "\n",
     "# Display the pandas DataFrame with the new column\n",
     "original_df"
@@ -832,7 +838,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "window_size = widgets.IntSlider(description = 'Window Size', min=1, max=100)"
+    "window_size = widgets.IntSlider(description = 'Window Size', value=20, min=1, max=100)"
    ]
   },
   {
@@ -861,7 +867,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "poly_order = widgets.BoundedIntText(description = 'Poly Order', min=0, max=10)"
+    "poly_order = widgets.BoundedIntText(description = 'Poly Order', min=0, value=3, max=10)"
    ]
   },
   {
@@ -890,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "id": "8b7c924b-7e99-488c-b85d-d531e23702be",
    "metadata": {},
    "outputs": [],
@@ -899,8 +905,12 @@
     "\n",
     "def on_window_size_change(change):\n",
     "    global original_df, selected_df # Remember to access the global variables\n",
-    "    # original_df['Smoothed Data'] = savgol_filter(original_df['Temperature'], window_size, poly_order)\n",
-    "    selected_df = original_df[(original_df['Year'] >= year_range.value[0]) & (original_df['Year'] <= year_range.value[1])]"
+    "    # catch the change in the window_size widget value and update the original_df\n",
+    "    # original_df['Smoothed Data'] = savgol_filter(original_df['Temperature'],\n",
+    "    #                                              window_size,\n",
+    "    #                                              poly_order).round(decimals=3)\n",
+    "    selected_df = original_df[(original_df['Year'] >= year_range.value[0])\n",
+    "                              & (original_df['Year'] <= year_range.value[1])]"
    ]
   },
   {
@@ -920,6 +930,16 @@
    "source": [
     "window_size.observe(on_window_size_change, 'value')\n",
     "window_size.observe(update_selected_datagrid, 'value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbd2b136",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_data_grid\n"
    ]
   },
   {
@@ -948,11 +968,12 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/widgets.py 82\n",
+    "# %answer key/dashboard/widgets.py 83\n",
     "\n",
     "def on_poly_order_change(change):\n",
     "    global original_df, selected_df\n",
-    "    original_df['Smoothed Data'] = savgol_filter(original_df['Temperature'], window_size.value, change['new']) # original_df['Smoothed Data'] = savgol_filter(original_df['Temperature'], window_size, poly_order)\n",
+    "    # catch the change in the poly_order widget value and update the original_df\n",
+    "    # original_df['Smoothed Data'] = savgol_filter(original_df['Temperature'], window_size, poly_order).round(decimal=3)\n",
     "    selected_df = original_df[(original_df['Year'] >= year_range.value[0]) & (original_df['Year'] <= year_range.value[1])]"
    ]
   },
@@ -1001,30 +1022,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e336fbb-9b1a-4eba-bff1-7d8abbc6abba",
-   "metadata": {},
-   "source": [
-    "Uh oh. Nothing happened. Let's try calling the fitting function directly."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "05f8337e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%exception\n",
-    "\n",
-    "original_df['Smoothed Data'] = savgol_filter(original_df['Temperature'], window_size.value, poly_order.value)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "675567a7",
    "metadata": {},
    "source": [
-    "Why did this happen? Fortunately the error message is pretty clear. We need to ensure that our `poly_order` Slider doesn't allow a user to select a value greater than `window_size - 1`. But we also don't want to let `poly_order` be greater than 10 to avoid poor conditioning. Where should we put this validation? Well, we are going to need to update the \"max\" trait of `poly_order` every time `window_size` is updated. So we need to add a line to add a line in the `on_window_size_change` function."
+    "Oh oh! Why did this happen? Fortunately the error message is pretty clear. We need to ensure that our `poly_order` Slider doesn't allow a user to select a value greater than `window_size - 1`. But we also don't want to let `poly_order` be greater than 10 to avoid poor conditioning. Where should we put this validation? Well, we are going to need to update the \"max\" trait of `poly_order` every time `window_size` is updated. So we need to add a line to add a line in the `on_window_size_change` function."
    ]
   },
   {
@@ -1035,13 +1036,17 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/widgets.py 90\n",
+    "# %answer key/dashboard/widgets.py 89\n",
     "\n",
     "def on_window_size_change(change):\n",
     "    global original_data, selected, poly_order\n",
     "    # change the maximum of the poly_order widget\n",
-    "    original_df['Smoothed Data'] = savgol_filter(original_df['Temperature'], change['new'], poly_order.value)\n",
-    "    selected_df = original_df[(original_df['Year'] >= year_range.value[0]) & (original_df['Year'] <= year_range.value[1])]\n"
+    "    # catch the change in the window_size widget value and update the original_df\n",
+    "    original_df['Smoothed Data'] = savgol_filter(original_df['Temperature'],\n",
+    "                                                 change['new'],\n",
+    "                                                 poly_order.value).round(decimals=3)\n",
+    "    selected_df = original_df[(original_df['Year'] >= year_range.value[0])\n",
+    "                              & (original_df['Year'] <= year_range.value[1])]\n"
    ]
   },
   {
@@ -1122,7 +1127,7 @@
     "```python\n",
     "plt.xlabel('Year')\n",
     "plt.ylabel('Temperature')\n",
-    "plt.title('Global Temperature versus Time')\n",
+    "plt.title('Global Ocean Temperature versus Time')\n",
     "plt.plot(subset_df['Year'], subset_df['Temperature'], label='Raw Data')\n",
     "plt.plot(subset_df['Year'], subset_df[SG_col], label='Smoothed Data')\n",
     "plt.legend()\n",
@@ -1147,15 +1152,7 @@
     "# plt.plot(subset_df['Year'], subset_df['Temperature'], label='Raw Data')\n",
     "# plt.plot(subset_df['Year'], subset_df[SG_col], label='Smoothed Data')\n",
     "plt.legend()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "012c1f7c-2cca-4d19-b590-c5f604ebeeb3",
-   "metadata": {},
-   "source": [
-    "Okay that works, but the plot is showing up in the log, and we want to show it in our notebook. What can we do to show and update the plot displayed in the notebook?"
+    "plt.show()\n"
    ]
   },
   {
@@ -1163,6 +1160,8 @@
    "id": "3ced1b75-94e3-462a-b4fd-8697652f63aa",
    "metadata": {},
    "source": [
+    "Okay that works, but the plot is showing up inline in our notebook. Once created, it can't be modified except by changing the data and re-executing the cell.  It sure would be nice if we could have the plot automatically update when the data year_range or smoothing parameters are changed.  How do we do that?\n",
+    "\n",
     "Yeah, we can use an Output widget again, just like we did with the dataframe.  Let's call it `plot_output`.  Then we can use the `display` function to display the plot in the `plot_output` widget.  Go ahead and replace the commented code in the cell below with the correct code to create the `plot_output` widget and run the cell afterward to see if it works."
    ]
   },
@@ -1174,9 +1173,9 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/widgets.py 101\n",
+    "# %answer key/dashboard/widgets.py 99\n",
     "\n",
-    "plot_view = widgets.Output() # create an output widget called plot_output"
+    "# create an output widget called plot_output"
    ]
   },
   {
@@ -1221,18 +1220,12 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/widgets.py 105\n",
+    "# %answer key/dashboard/widgets.py 103\n",
     "\n",
     "def output_plot(change):\n",
     "    plot_view.clear_output(wait=True)\n",
     "    with plot_view:\n",
-    "        plt.xlabel('Year')\n",
-    "        plt.ylabel('Temperature')\n",
-    "        plt.title('Global Temperature versus Time')\n",
-    "        plt.plot(selected_df['Year'], selected_df['Temperature'])\n",
-    "        plt.plot(selected_df['Year'], selected_df['Smoothed Data'])\n",
-    "        plt.legend()\n",
-    "        plt.show()"
+    "        # Create a plot"
    ]
   },
   {
@@ -1341,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 2,
    "id": "7e91e724-9497-4571-ab90-9b1652cbd868",
    "metadata": {},
    "outputs": [],
@@ -1349,14 +1342,6 @@
     "from nbdev.export import nb_export\n",
     "nb_export('02b_widgets.ipynb', 'dashboard')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "79b94a16",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
